--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
-title: 日本福岡錫安華人宣道会東区教会
+title: 日本福岡錫安華人宣道会東区堂
 timezone: UTC
 collections:
   posts:
@@ -8,6 +8,6 @@ collections:
   uploads:
     title: Uploads
     output: true
-name: 日本福岡錫安華人宣道会東区教会
+name: 日本福岡錫安華人宣道会東区堂
 markdown: kramdown
 permalink: "/blog/:year/:month/:day/:title"
